# tabu-graph-coloring

./: gis2-sprawozdanie.tex  sources.bib
projekt/: CMakeLists.txt
projekt/include/: colorClass.h  tabu.h  utils.h
projekt/src/: colorClass.cpp  main.cpp  tabu.cpp  utils.cpp
resources/: car.csv  carResults.csv  leightonResults.csv  mycielResults.csv  queensResults.csv  racResults.csv  randomResults.csv
resources/Release/: Release.rar
